fix #1239 [Elite Term] - Landing - Top bar - Login button - The login window does not  pop up when click on the "login" button on mobile

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -10341,7 +10341,7 @@ background-color
 		padding: 0;
 	}
 	.login-form {
-		top: 30%;
+		top: 10;
 		z-index: 2000;
 	}
 	a.navbar-brand>img {
